seminar-master/uebungen/loesungen/07-ingress/02-ealen-echo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: echo-server
  labels:
    app: echo-server
spec:
  containers:
    - name: echo
      image: ealen/echo-server
      ports:
        - containerPort: 80
  restartPolicy: Never
