seminar-master/uebungen/loesungen/07-ingress/01-hashicorp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hashicorp-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: user-sk-hashicorp.kubernetes-cluster-180.schulung.gcp.ordix.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hashicorp-service
                port:
                  number: 80
