seminar-master/uebungen/loesungen/07-ingress/02-ealen-echo-ingress-4traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: echo-rewrite
spec:
  replacePathRegex:
    regex: ^/(.*)
    replacement: /rest/$1

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: user-sk-echo-rewrite@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: user-sk-rest.kubernetes-cluster-180.schulung.gcp.ordix.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo-service
                port:
                  number: 80
