seminar-master/uebungen/loesungen/07-ingress/02-ealen-echo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /rest/$1
spec:
  ingressClassName: nginx
  rules:
    - host: user-sk-rest.kubernetes-cluster-180.schulung.gcp.ordix.de
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-service
                port:
                  number: 80
